<resources>
    <string name="app_name">Just Draw</string>

    <string name="count_1000">1000</string>
    <string name="count_5000">5000</string>
    <string name="count_10000">10000</string>

    <string name="title_native">Native Canvas</string>
    <string name="title_native_path">Native Canvas with Path</string>
    <string name="title_native_pro">Native Canvas Pro</string>
    <string name="title_web">Web</string>
    <string name="title_v8">V8 &amp; Canvas</string>
    <string name="title_jc_test">JustCanvasTest</string>
    <string name="title_jc">JustCanvas</string>
    <string name="title_jc_anim">JustCanvasAnim</string>

    <string name="btn_draw">Draw</string>

    <string name="format_time">%s ms</string>
</resources>
